# mcgui

./: .gitattributes  README.md  pyproject.toml  template_usage.md
doc/detailed-design/: update_doc_from_src.py
src/MVGUI/: ALLTEST_OK_TestReport_2025-03-27_07_45_03.txt  common_block_config.yaml  confighandler.py  drive_system_config.yaml  main.py  mainwindow.py  master_tab.py  motor_variant_config.yaml  piezo_variant_config.yaml  pivot_bearing_config.yaml  terminal.py  test_config.yaml  test_config_2.yaml  test_parser.py  tower_variant_config.yaml
src/MVGUI/Piezovariant/: piezo_variant_controller.py  piezo_variant_tab.py  piezo_variant_view.py
src/MVGUI/commands/: command_controller.py  command_view.py
src/MVGUI/common_block/: common_block_controller.py  common_block_view.py
src/MVGUI/commonblock/: common_block_controller.py  commonblock_model.py  commonblock_tab.py
src/MVGUI/config_files/: piezo_config.yaml
src/MVGUI/drivesystem/: drive_system_controller.py  drive_system_model.py  drivesystem_tab.py  drivesystem_view.py
src/MVGUI/example/: common_block_controller.py  common_block_model.py  common_block_view.py  controller.py  model.py  view.py
src/MVGUI/motorvariant/: motor_config_controller.py  motor_config_model.py  motor_variant_tab.py  motor_variant_view.py  motorvariant_controller.py  motorvariant_model.py
src/MVGUI/piezo/: piezo_controller.py  piezo_tab.py  piezo_view.py
src/MVGUI/pivotbearing/: pivot_bearing_config.yaml  (+4 more)
src/mvcgui/: datatypes.yaml  mainwindow.py  master_tab.py  requirements.txt  serial_dialog.py  style.qss  terminal.py
(+17 files in other folders)
