[build-system]
requires = ["setuptools", "setuptools-scm", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "MCGUI"
version = "0.0.1"
description = "GUI to set paramas over MC"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Dennis Baumgärtner", email = "dennis.baumgaertner@new-tec.de" }
]
license = {text = "BSD 3-Clause"}
classifiers = [
    "License :: OSI Approved :: BSD 3-Clause",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

dependencies = [
    "toml>=0.10.2"
]

[project.optional-dependencies]
test = [
  "pytest > 5.0.0",
  "pytest-cov[all]"
]

[project.urls]
documentation = ""
repository = ""
tracker = ""

[project.scripts]
#template_python = "template_python.template_python:main"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
